@@ -5,7 +5,7 @@
  * 1.1 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
  * http://www.mozilla.org/MPL/
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS" basis,
  * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
  * for the specific language governing rights and limitations under the
@@ -31,7 +31,7 @@
  * and other provisions required by the GPL or the LGPL. If you do not delete
  * the provisions above, a recipient may use your version of this file under
  * the terms of any one of the MPL, the GPL or the LGPL.
- * 
+ *
  * ***** END LICENSE BLOCK ***** */
 
 // Class to handle selection
@@ -41,11 +41,11 @@ var Selection = {
 		var i;
 		var selObj;
 		var value = "";
-		
+
 		for(i = 0; i < frames.length; ++i) {
 			try {
 				var tmpVal = frames[i].getSelection().toString();
-				
+
 				if (tmpVal == "") { // != don't work...
 				}
 				else {
@@ -60,9 +60,9 @@ var Selection = {
 			for(i = 0; i < frames.length; ++i) {
 				try {
 					var tmpSelselObj = this.getFrame(frames[i].frames);
-					
+
 					if (tmpSelselObj.toString() == "") {
-					} 
+					}
 					else {
 						selObj = tmpSelselObj;
 					}
@@ -70,32 +70,32 @@ var Selection = {
 				catch (e) {}
 			}
 		}
-		
+
 		return selObj;
 	},
 
-	/* 
+	/*
 	 * Return actual selection.
 	 */
 	get: function() {
 		var i;
-		
+
 		// Select a text from the actual document
 		var selObj = getBrowser().contentWindow.getSelection();
-		
+
 		// value is returned
 		var value = selObj.toString();
 
 		// If no text is selected, we try to get it from frames
 		if(value == "") {
-			try { 
+			try {
 				selObj = this.getFrame(getBrowser().contentWindow.frames);
 				value = selObj.toString();
 			}
 			catch (e) {
 			}
 		}
-		
+
 		// If the text is not selected, we try to get it
 		// from inputs and textareas
 		if(value == "") {
@@ -106,23 +106,23 @@ var Selection = {
 			}
 			catch (e) {
 			}
-		} 
+		}
 		// the text is selected !
-		else { 
-			value = selObj.getRangeAt(0); 
+		else {
+			value = selObj.getRangeAt(0);
 			var documentFragment = value.cloneContents();
 			var s = new XMLSerializer();
 			var d = documentFragment;
 			var str = s.serializeToString(d);
 			value = this.wash(str);
 		}
-		
+
 		return value;
 	},
 
 	/* Transform HTML to usable text to encrypt */
 	wash: function(text) {
-		//Si il semblerais que l'on soit dans un texte html, on va éliminer les \n qui n'on rien à faire la !		
+		//Si il semblerais que l'on soit dans un texte html, on va éliminer les \n qui n'on rien à faire la !
 		if (text.indexOf("<br>") != -1 || text.indexOf("<BR>") != -1 || text.indexOf("<BR/>") != -1  || text.indexOf("<br/>") != -1  || text.indexOf("<BR />") != -1  || text.indexOf("<br />") != -1) {
 			var reg=new RegExp("\n", "gi");
 			text = text.replace(reg,"");
@@ -131,22 +131,22 @@ var Selection = {
 		str = text;
 		/*var reg=new RegExp("<br[^>]*>\n<br[^>]*>", "gi"); //Pour ne pas enlever un bouble <br>\n<br> logique (bug des boubles <br>)
 		str = text.replace(reg,"\n\n");
-		
+
 		var reg=new RegExp("<br>\n<br>", "gi");
 		str = str.replace(reg,"\n\n");
 
 		var reg = new RegExp("<br[^>]*>\n", "gi"); // Pour pas faire des doubles retours (surviens sur certains sites)
 		str = str.replace(reg,"\n");
-		
+
 		var reg=new RegExp("<br>\n", "gi");
 		str = str.replace(reg,"\n");
-		
+
 		var reg=new RegExp("\n<br[^>]*>", "gi"); //Pour pas faire des doubles retours (surviens sur certains sites)
 		str = str.replace(reg,"\n");
-		
+
 		var reg=new RegExp("\n<br>", "gi");
 		str = str.replace(reg,"\n");*/
-		
+
 		//TODO-GMAIL-ATTACH
 		var reg=new RegExp("<div class=\"ma\" style=\"border-top: 2px solid rgb*</table></div>", "gi"); //Spécialité gmail (ne devrait pas faire de confilts)
 		str = str.replace(reg,"");
@@ -156,7 +156,7 @@ var Selection = {
 		str = str.replace(reg,"\n");
 		var reg=new RegExp("<br>", "gi");
 		str = str.replace(reg,"\n");
-		
+
 		var reg=new RegExp("<script[^>]*>[^<]*</script[^>]*>", "gi"); //Élimination des scripts
 		str = str.replace(reg,"\n");
 
@@ -183,38 +183,38 @@ var Selection = {
 
 		reg=new RegExp("&gt;", "g"); // Petites problèmes de > de temps en temps
 		str = str.replace(reg, ">");
-		
+
 		return str;
 	},
-	
-	/* 
+
+	/*
 	 * Return true if the selection is editable.
 	 */
 	isEditable: function() {
-		// We try to get a text from a textaera or input :		
+		// We try to get a text from a textaera or input :
 		try {
 			var focused = document.commandDispatcher.focusedElement;
 			var value = focused.value;
 			value = value.substring(focused.selectionStart,focused.selectionEnd);
 		}
 		catch (e) {
-			// If we got an error, there are not 
+			// If we got an error, there are not
 			// textaera or input focused
 			return false;
 		}
-		
-		// If text is empty, this is strange, so we consider that 
+
+		// If text is empty, this is strange, so we consider that
 		// there are not textaera or input focused
-		if(value == "") 
+		if(value == "")
 			return false;
-		
+
 		return true; //If it's ok !
 	},
 
 	/*
 	 * Modify the selection.
 	 */
-	set: function(text) {
+	set: function(text, infoSignAndCrypt) {
 		/* if the option "always show in a new window" is checked */
 		var key = "extensions.firegpg.result_always_in_new_window";
 		var prefs = Components.classes["@mozilla.org/preferences-service;1"].
@@ -222,7 +222,7 @@ var Selection = {
 		if(prefs.getPrefType(key) == prefs.PREF_BOOL) {
 			if(prefs.getBoolPref(key)) {
 				/* text the text */
-				showText(text);
+				showText(text,undefined,undefined,undefined,infoSignAndCrypt);
 				return;
 			}
 		}
@@ -235,10 +235,10 @@ var Selection = {
 			var startPos = focused.selectionStart;
 			var endPos = focused.selectionEnd;
 			var chaine = focused.value;
-			
+
 			// We create the new string and replace it into the focused element
 			focused.value = chaine.substring(0, startPos) + text + chaine.substring(endPos, chaine.length);
-			
+
 			// We select the new text.
 			focused.selectionStart = startPos;
 			focused.selectionEnd = startPos + text.length ;
