@@ -36,3 +36,6 @@ whatIsNewDescription=News of FireGPG : (An anonymous ping has been send to FireG
 newVersionAlert=A new version of FireGPG is available, would you like to update now?
 turn-off-updates-w1=WARNING: We recommend you don't turn automatic updates off if you are unable to update FireGPG with Firefox or if you don't regularly check for new addon versions.
 turn-off-updates-w2=Are you sure?  We recommend leaving this option on.  It is here to help you maintain FireGPG up to date, which is still in beta and can have security issues.
+cryptAndSignFailedPass=Sorry, but sign and encryt failled.
+cryptAndSignFailed=Sorry, but your password is wrong.
+validSignInCrypt=A valid sign was found in encrypted text, with a key of
