@@ -36,3 +36,6 @@ whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) : (Un ping an
 newVersionAlert=Une nouvelle version de FireGPG est disponible, voulez-vous effectuer la mise à jour maintenant ?
 turn-off-updates-w1=Attention ! Vous ne devriez pas désactiver les autos-mises à jour de FireGPG si vous ne pouvez pas mettre à jour FireGPG avec FireFox, ou si vous ne vérifiez pas régulièrement la présence de nouvelles versions de vos plugins !
 turn-off-updates-w2=Êtes vous vraiement certain ? Nous recommandons de ne pas désactiver cette option, elle est là afin de vous aider à avoir toujours la dernière version de FireGPG, qui est encore en Beta et qui pourrait avoir des problèmes de sécurité !
+cryptAndSignFailedPass=Le chiffrement et la signature ont échouées car le mot de passe est incorrect.
+cryptAndSignFailed=Le chiffrement et la signature ont échoués.
+validSignInCrypt=Une signature valide à été trouvé dans le texte chiffré, apartenant à
